--- a/src/css/game.candidate.css
+++ b/src/css/game.candidate.css
@@ -4,24 +4,41 @@
   box-sizing: border-box;
 }
 
-.row {
-  height: 24px;
-  line-height: 24px;
+body {
+  position: relative;
+  margin: 12px;
 }
 
-.row > div {
-  display: inline-block;
-  width: 24px;
-  height: 24px;
-  border: 1px solid lightgrey;
+#snake-game {
+  position: relative;
+  font-family: 'Courier New';
+  font-size: 12px;
+  color: black;
+  background-color: #eee;
+}
+
+#snake-game.gameover:after {
+  content: 'GAME OVER';
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  text-align: center;
+  position: absolute;
+  z-index: 10;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(255, 255, 255, 0.75);
 }
 
 .wall {
-  background-color: black;
-}
-
-.empty {
-  background-color: lightgrey;
+  border: 8px solid #000;
+  display: inline-grid;
+  grid-template: repeat(var(--rows), 24px)/ repeat(var(--columns), 24px);
+  gap: 2px;
+  background-color: #eee;
 }
 
 .snake {
